# OpenWorld-InorganicChemistry

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  20250827_174300_papers-dl_pypi_processed.txt  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OthersideAI-self-operating-computer_github_repo.txt  README.md  SECURITY.md  SECURITY_GUIDE.md  docker-compose.yml  jannisborn-paperscraper_github_repo.txt  main.txt  oic_runs.sqlite3  pyproject.toml  pytest.out  ruff.toml  temp_imports.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
backend/app/: main.py
backend/tests/: test_main.py
data/: sample_values.csv
docs/: Mahdisadjadi-arxivscraper_github_repo.txt
examples/: settings_example.py
gui/: app.py
openinorganicchemistry/: __init__.py  api.py  cli.py
openinorganicchemistry/agents/: analysis.py  codex.py  collaboration.py  data_io.py  literature.py  ml_prediction.py  optimization.py  orchestration.py  prompts.py  reporting.py  simulation.py  synthesis.py
openinorganicchemistry/core/: __init__.py  chemistry.py  data_formats.py  dft_utils.py  logging_config.py  monitoring.py  plotting.py  settings.py  storage.py  validation.py
openinorganicchemistry/integrations/: lit_sources.py  sgpt.py  websearch.py
scipaper-cli/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
scipaper-cli/src/scipaper/: cli.py  config.py  main.py
scipaper-cli/src/scipaper/agents/: __init__.py  paper_agents.py  server.py  tools.py
scipaper-cli/src/scipaper/api/: __init__.py
scipaper-cli/src/scipaper/api/v1/: __init__.py
scipaper-cli/src/scipaper/api/v1/routers/: __init__.py  fetch.py  parse.py  search.py  system.py
scipaper-cli/src/scipaper/core/: fetcher.py
scipaper-cli/src/scipaper/sources/: __init__.py  arxiv.py  base_source.py  crossref.py  pubmed.py  semanticscholar.py  xrxiv_local.py
scipaper-cli/src/scipaper/utils/: ids.py  logging_setup.py  parse.py
scipaper-cli/tests/: test_agents.py  test_api_endpoints.py  test_cli.py  test_health.py  test_ids.py  test_parse.py  test_sources.py  test_xrxiv_local.py
scripts/: configure_api_key_macos.sh  install_sgpt.sh  run_smoke.sh
src/scipaper/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py
src/scipaper/agents/: __init__.py  paper_agents.py  server.py
src/scipaper/api/: dependencies.py
src/scipaper/api/v1/: __init__.py
src/scipaper/api/v1/routers/: __init__.py  advanced_search.py  fetch.py  parse.py  recommendations.py  search.py  system.py
src/scipaper/core/: advanced_search.py  fetcher.py  monitoring.py  recommendations.py
src/scipaper/sources/: __init__.py  base_source.py  registry.py
src/scipaper/sources/implementations/: arxiv.py  crossref.py  googlescholar.py  ieee.py  pubmed.py  semanticscholar.py  xrxiv_local.py
src/scipaper/utils/: __init__.py  export.py  ids.py  parse.py  parser.py
src/scipaper_cli/: cli.py  main.py
src/scipaper_cli/agents/: paper_agents.py  server.py  tools.py
src/scipaper_cli/api/v1/routers/: fetch.py  parse.py  search.py
src/scipaper_cli/core/: fetcher.py
tests/: test_agents.py  test_agents_mock.py  test_analysis_csv.py  test_api.py  test_cli.py  test_cli_commands.py  test_codex_mock.py  test_config.py  test_core.py  test_e2e.py  test_health.py  test_integration.py  test_main.py  test_parse.py  test_pubmed.py  test_semanticscholar.py  test_settings.py  test_simulation.py  test_sources.py  test_utils.py  test_websearch.py
tools/: coherent_cli.py
