[tool.poetry]
name = "OpenWorld-InorganicChemistry"
version = "1.1.2"
description = "An open-source platform for inorganic materials discovery, synthesis, and analysis using LLMs and AI Agents."
authors = ["Nik Jois <nikjois@llamasearch.ai>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.5.2"
langchain = "^0.0.345"
motor = "^3.3.2" # for MongoDB
openai = "^1.3.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1" # for testing fastapi async client

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
