[project]
name = "scipaper-cli"
version = "1.0.0"
description = "Modular, OA-first scientific paper tool (FastAPI + CLI + optional Agent)."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Nik Jois", email = "nikjois@llamasearch.ai" }]
license = "MIT"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "click>=8.1.7",
  "rich>=13.7.1",
  "loguru>=0.7.2",
  "arxiv>=2.1.0",
  "beautifulsoup4>=4.12.3",
  "pandas>=2.2.2",
  "matplotlib>=3.9.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "openai>=1.40.0",
  "ollama>=0.3.0"
]

[project.optional-dependencies]
agents = ["openai-agents>=0.4.0"]
dev = [
  "ruff>=0.4.5",
  "pyright>=1.1.373",
  "coverage>=7.5.0",
  "pip-audit>=2.7.3",
  "bandit>=1.7.9",
  "respx>=0.21.1"
]

[project.scripts]
scipaper = "scipaper.cli:main"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
